better gradle yopta